--- a/src/main/resources/META-INF/resources/swagger-ui.html
+++ b/src/main/resources/META-INF/resources/swagger-ui.html
@@ -27,7 +27,7 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo">ESP Service</a> 
+    <a id="logo">Interview Service</a> 
 
     <form id='api_selector'>
       <div class='input'>
