--- a/src/main/resources/META-INF/resources/swagger-ui.html
+++ b/src/main/resources/META-INF/resources/swagger-ui.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Inventory CPE Service</title>
+  <title>Interview Service</title>
   <link href='webjars/springfox-swagger-ui/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
   <link href='webjars/springfox-swagger-ui/css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
   <link href='webjars/springfox-swagger-ui/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
